feat: Update wallet service dependency - MEED-7455 - Meeds-io/MIP#154
Update wallet service packaging.